--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+    <header>
+        <h1>Bienvenue sur mon Portfolio</h1>
+    </header>
+    <nav>
+        <a href="index.html">Accueil</a>
+        <a href="mes_projets.html">Mes projets</a>
+        <a href="mon_CV.html">Mon CV</a>
+    </nav>
+
 </body>
 </html>
