JS file added & all files modified

--- a/mes_projets.html
+++ b/mes_projets.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mes projets</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+    <header>
+        <h1>Bienvenue sur mon Portfolio</h1>
+    </header>
+
+    <nav>
+        <a href="index.html">Accueil</a>
+        <a href="mes_projets.html">Mes projets</a>
+        <a href="mon_CV.html">Mon CV</a>
+    </nav>
+    <script src="script.js"></script>
 </body>
 </html>
