--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <header>
         <h1>Bienvenue sur mon Portfolio</h1>
     </header>
+
     <nav>
         <a href="index.html">Accueil</a>
         <a href="mes_projets.html">Mes projets</a>
         <a href="mon_CV.html">Mon CV</a>
     </nav>
-
+    <script src="script.js"></script>
 </body>
 </html>
