--- a/mon_CV.html
+++ b/mon_CV.html
@@ -18,6 +18,11 @@
         <a href="mes_projets.html">Mes projets</a>
         <a href="mon_CV.html">Mon CV</a>
     </nav>
+
+    <canvas id="projector">Your browser does not support the Canvas element.</canvas>
+
+
+
     <script src="script.js"></script>
 </body>
 </html>
